--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,10 +37,11 @@
 .grid-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    gap: 0.75rem;
 
     @include tablet {
         grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
     }
 
     @include desktop {
